3-blackbox-exporter.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: monitoring
  name: blackbox-exporter
  labels:
    app: blackbox-exporter
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 9115
      targetPort: http
  selector:
    app: blackbox-exporter
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      labels:
        app: blackbox-exporter
    spec:
      containers:
        - name: blackbox-exporter
          image: quay.io/prometheus/blackbox-exporter:v0.23.0
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9115
          livenessProbe:
            httpGet:
              path: /health
              port: http
          readinessProbe:
            httpGet:
              path: /health
              port: http
          resources:
            requests:
              memory: 256Mi
              cpu: 200m
            limits:
              memory: 256Mi
              cpu: 200m
