5-network-test.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: network
spec:
  podSelector: {}
  policyTypes:
    - Egress
    - Ingress
